--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7Gadget_600_30000_70000.gif" alt="An awesome GIF">
         
         <!-- Display the second GIF (add the URL later) -->
-        <img src="" alt="An awesome GIF">
+        <img src="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7Gadget_1000_30000_110000.gif" alt="Another awesome GIF">
     </div>
     
     <!-- Caption for the second GIF -->
