--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <img src="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7Gadget_600_30000_70000.gif" alt="An awesome GIF">
         
         <!-- Display the second GIF (add the URL later) -->
-        <img src="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7Gadget_1000_30000_110000.gif" alt="Another awesome GIF">
+        <img src="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7InfGadget_300_0_20000.gif" alt="Another awesome GIF">
     </div>
     
     <!-- Caption for the second GIF -->
-    <p class="caption">Here's a zoom-in view.</p>
+    <p class="caption"></p>
 
     <!-- Provide a direct link to the first GIF -->
     <p>If you want to download the GIF directly, <a href="https://github.com/ADlepirate/GIF-TPIVa/raw/main/7Gadget_600_30000_70000.gif" target="_blank">click here</a>.</p>
